tests/baselines/reference/constructorTagOnObjectLiteralMethod.errors.txt
example.js(3,16): error TS2339: Property 'bar' does not exist on type '{ Foo(): void; }'.
example.js(5,2): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== example.js (2 errors) ====
    const obj = {
      /** @constructor */
      Foo() { this.bar = "bar" }
                   ~~~
!!! error TS2339: Property 'bar' does not exist on type '{ Foo(): void; }'.
    };
    (new obj.Foo()).bar
     ~~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    